--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@ Screen caption from dataset download page. Note that data was downloaded in JSON
 <p>Create RStudio project from GitHub repo. First create GitHub repo and call it <code>eda_demo</code>. Further instructions can be found <a href="https://rstats-tartu.github.io/createrstudioprojectfromgithub/">here</a>.</p>
 <p><br></p>
 </div>
-<div id="download-pk10-data-from-github" class="section level2">
-<h2>Download PK10 data from GitHub</h2>
+<div id="download-cancer-incidence-dataset-from-github" class="section level2">
+<h2>Download cancer incidence dataset from GitHub</h2>
 <p>Download “cancer_incidence_PK10.json” file from “rstats-tartu/datasets” GitHub repo:</p>
 <pre class="r"><code>url &lt;- &quot;https://raw.githubusercontent.com/rstats-tartu/datasets/master/cancer_incidence_PK10.json&quot;
 dir.create(&quot;data&quot;)
